# dicty

./: .gitignore  .gitmodules  README.md  gen_proto.sh  mypy.ini  pyproject.toml  requirements.txt
dicty/: __init__.py  __main__.py  config.toml  database.py  dictionary.py  json.py  utils.py
dicty/blueprints/: __init__.py  dictionaries.py  units.py
dicty/database/: __init__.py  rows.py  unit.py
dicty/database/unit/: __init__.py  json.py
dicty/db/: __init__.py  bakery.py  cli.py  db.py  models.py
dicty/dictionary/: __init__.py
dicty/proto/: README.md
dicty/scraper/: __init__.py  scraper.py  website.py
dicty/scraper/website/: __init__.py  collins.py
dicty/utils/: __init__.py
k8s/: .gitignore  create_venv.sh  deploy-playbook.yml  requirements.txt
k8s/inventory/staging/: hosts
k8s/inventory/staging/group_vars/: all.yml  docker_registry.yml  k8s_rollout.yml
k8s/inventory/staging/host_vars/: localhost.yml  vagrant-k8s.yml
k8s/roles/docker_registry/defaults/: main.yml
k8s/roles/docker_registry/handlers/: main.yml
k8s/roles/docker_registry/tasks/: handle_dockerfile.yml  main.yml
k8s/roles/docker_registry/templates/: daemon.json  dicty.Dockerfile
k8s/roles/docker_registry/tests/: test.yml
k8s/roles/docker_registry/vars/: main.yml
k8s/templates/: db-deploy.yml  db-svc.yml  dicty-deploy.yml  dicty-svc.yml  dicty.Dockerfile
proto/dicty/: definition.proto  dictionary.proto  example.proto  form.proto  generic.proto  grammatical_feature.proto  language.proto  meaning.proto  part_of_speech.proto  pronunciation.proto  sense.proto  source.proto  style.proto  synonym.proto  unit.proto
src/dicty/: .gitignore  __main__.py  alembic.ini  config.py  secrets.yaml  utils.py
src/dicty/alembic/: env.py
src/dicty/db/: model.py
src/dicty/proto/: README.md
(+14 files in other folders)
