[tool.poetry]
name = "dicty"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pycountry = "^23.12.11"
flask = "^3.0.1"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.25"}
sqlalchemy-utils = "^0.41.1"
asyncpg = "^0.29.0"
pyyaml = "^6.0.1"
mypy = "^1.8.0"
psycopg = "^3.1.17"
flask-sqlalchemy = "^3.1.1"
selenium = "^4.17.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
