[tool.poetry]
name = "dicty"
version = "0.1.0"
description = ""
authors = ["subado <subado.main@gmail.com>"]
license = "GPL"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
loguru = "^0.7.2"
psycopg = "^3.2.3"
grpcio = "^1.68.0"
pycountry = "^24.6.1"
alembic = "^1.14.0"
grpcio-tools = "^1.68.0"
dynaconf = "^3.2.6"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.36"}
greenlet = "^3.1.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.13.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry-auto-export]
output = "requirements.txt"
without_hashes = true
without = ["dev"]
